# golf-ball-pinhole-distance

./: Distancem-Straight-linem-Landscapepx1920w622-Portraitpx1080w488-RatioLP.csv  GoogleSheet.url  README.md  Readme.txt  app-old.py  app.py  git_work.md  golf_ball_distance.py  golf_ball_pixels_1640bin_640crop.csv  history.md  pyproject.toml  raw.py  table_dist.py
templates/: index.html
