[project]
name = "golf-ball-pinhole-distance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python-headless>=4.0.0",
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
    "flask>=3.1.3",
    "opencv-python>=4.13.0.92",
]
